fixed nav style, home page spacing and margins

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -15,6 +15,10 @@ body {
 
 }
 
+.lead {
+  font-size: 2em;
+}
 pre {
   font-family: 'Audiowide', cursive;
+  font-size: 1em;
 }
